RESOLVED FIXED141546
ArithSqrt should not be conditional on supportsFloatingPointSqrt
https://bugs.webkit.org/show_bug.cgi?id=141546
Summary ArithSqrt should not be conditional on supportsFloatingPointSqrt
Benjamin Poulain
Reported 2015-02-12 17:54:06 PST
ArithSqrt should not be conditional on supportsFloatingPointSqrt
Attachments
Patch (9.41 KB, patch)
2015-02-12 17:55 PST, Benjamin Poulain
no flags
Patch (9.59 KB, patch)
2015-02-13 14:55 PST, Benjamin Poulain
ggaren: review+
Benjamin Poulain
Comment 1 2015-02-12 17:55:26 PST
Geoffrey Garen
Comment 2 2015-02-13 10:46:31 PST
Comment on attachment 246495 [details] Patch r=me
Filip Pizlo
Comment 3 2015-02-13 11:58:38 PST
Comment on attachment 246495 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=246495&action=review You should fix the register allocation bug. Also, since your tests currently don't disable concurrent JIT, they will be flaky. > Source/JavaScriptCore/dfg/DFGSpeculativeJIT.cpp:3549 > + FPRTemporary result(this, op1); This should be FPRResult instead of FPRTemporary when we're doing flushRegisters(). Otherwise weird and uncommon register allocation bugs will happen. > Source/JavaScriptCore/tests/stress/math-sqrt-basics-disable-architecture-specific-optimizations.js:1 > +//@ run("no-architecture-specific-optimizations", "--enableArchitectureSpecificOptimizations=false") Should probably be: run("no-architecture-specific-optimizations", "--enableArchitectureSpecificOptimizations=false", *NO_CJIT_OPTIONS) For good measure, you should probably also add a second line that runs in FTL as well. > Source/JavaScriptCore/tests/stress/math-sqrt-basics-disable-architecture-specific-optimizations.js:10 > + for (var i = 0; i < 1000000; ++i) { Only 10000 runs are needed with cjit turned off. > Source/JavaScriptCore/tests/stress/math-sqrt-basics.js:8 > + for (var i = 0; i < 1000000; ++i) { Only 10000 runs are needed.
Benjamin Poulain
Comment 4 2015-02-13 14:55:54 PST
Geoffrey Garen
Comment 5 2015-02-13 14:57:27 PST
Comment on attachment 246552 [details] Patch r=me
Benjamin Poulain
Comment 6 2015-02-13 15:08:23 PST
Note You need to log in before you can comment on or make changes to this bug.